objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Card_Payment_History_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Card Payment History Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Payment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Payment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_History_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Direct Debit History Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Direct Debit Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Payment Schedule Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerSettings</label>
</CustomObject>